--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,19 +40,20 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: us-east-1
-          role-to-assume: ${{ vars.ROLE_TO_ASSUME }}
+          role-to-assume: arn:aws:iam::325565585839:role/sagebase-github-oidc-synapse-status-lambda-deploy
           role-session-name: GitHubActions-${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ github.run_id }}
           role-duration-seconds: 900
        
       - name: Deploy CDK Stack
         env:
-          ACCOUNT_ID: ${{ vars.ACCOUNT_ID }}
-          VPC_ID: ${{ vars.VPC_ID }}
+          ACCOUNT_ID: 325565585839
+          VPC_ID: vpc-07c1769bf5cb50b98
+          AVAILABLE_ZONES: "us-east1a, us-east-1c"
           STATUSPAGE_API_KEY: ${{ secrets.STATUSPAGE_API_KEY }}
-          STATUSPAGE_PAGE_ID: ${{ vars.STATUSPAGE_PAGE_ID }}
-          STATUSPAGE_REPO_COMPONENT_ID: ${{ vars.STATUSPAGE_REPO_COMPONENT_ID }}
-          STATUSPAGE_WEBSITE_COMPONENT_ID: ${{ vars.STATUSPAGE_WEBSITE_COMPONENT_ID }}
-          EXEC_SCHEDULE_MIN: ${{ vars.EXEC_SCHEDULE_MIN }}
+          STATUSPAGE_PAGE_ID: kh896k90gyvg
+          STATUSPAGE_REPO_COMPONENT_ID: sb280jd7bbs6
+          STATUSPAGE_WEBSITE_COMPONENT_ID: dcgr2fz40pqc
+          EXEC_SCHEDULE_MIN: "5 minutes"
         run: |
           cdk --region us-east-1 deploy --require-approval never
 
