--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,12 +48,12 @@ jobs:
         env:
           ACCOUNT_ID: 325565585839
           VPC_ID: vpc-07c1769bf5cb50b98
-          AVAILABLE_ZONES: "us-east-1a, us-east-1c"
+          AVAILABLE_ZONES: "us-east-1a,us-east-1c"
           STATUSPAGE_API_KEY: ${{ secrets.STATUSPAGE_API_KEY }}
           STATUSPAGE_PAGE_ID: kh896k90gyvg
           STATUSPAGE_REPO_COMPONENT_ID: sb280jd7bbs6
           STATUSPAGE_WEBSITE_COMPONENT_ID: dcgr2fz40pqc
-          EXEC_SCHEDULE_MIN: "5 minutes"
+          EXEC_SCHEDULE_EXPRESSION: "5 minutes"
         run: |
           cdk --region us-east-1 deploy --require-approval never
 
